--- a/Source/BuildSpyNark_Test/BuildSpyNark_Test.csproj
+++ b/Source/BuildSpyNark_Test/BuildSpyNark_Test.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BuildLogFile_Test.cs" />
     <Compile Include="Project_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
